--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -27,6 +27,6 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'dock2'
-    repository: 'gorgethepotato / azuredevop1'
+    repository: $(repository)
     command: 'buildAndPush'
     Dockerfile: '**/AzureDockerfile'
